LRU使用LinkedList双向链表